--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-indiana-drag-scroll": "^2.0.1",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "react-spring": "^9.1.1",
