--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "react-spring": "^9.1.1",
+    "redux-undo": "^1.0.1",
     "uniqid": "^5.3.0",
     "use-interval": "^1.3.0",
     "web-vitals": "^1.1.1",
